
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## 3.4.2 - 2023-11-03
### Added
- Display (and search) of phone numbers in user list

### Changed
- Possibility to cancel registration and invoice from the payment page


## 3.4.1 - 2023-10-30
### Fixed
- Issue in rendering if the registration has an extra of type image and this extra is not checked (ValueError)


## 3.4.0 - 2023-10-13
### Changed
- New J+S export (they changed their definition)


## 3.3.0 - 2023-10-11

### Added
- Add some text on payment page if registration is set to expire after a delay
- New paid column to registrations export
- Multiple appointments for a single course
- New settings (KEPCHUP_REGISTRATION_HIDE_COUNTRY, KEPCHUP_REGISTRATION_HIDE_OTHER_PHONES,
  KEPCHUP_APPOINTMENTS_WITHOUT_WIZARD)

### Changed
- payment method and texts for Monthey
- removed error if mail cannot be sent (anymail error), set it as warning instead
- Courses overlap is now calculated using real dates when available, not just weekdays
- Better recap of registration after payment

### Fixed
- Ensure we send confirmation after the payment is done, not when payment page is displayed
- Ensure we don't get stuck expiring already expired registrations
- Avoid a crash if the same child is registered twice in the same course


## 3.2.2 - 2023-08-22
### Added
- Display lagapeo number in invoices

### Changed
- Switch postfinance to lightbox mode
- Step labels for Montreux
- Page headings in wizard are now coherent with step labels

### Fixed
- Import of children from Lagapeo
- Typo in Wizard
- Do not send success emails on every webhooks received by postfinance
- Montreux varia
- Export of registrations for instances without payment


## 3.2.1 - 2023-08-14
### Added
- Postfinance IP check

### Changed
- Webhook handling for postfinance - do not raise 404 errors
- Simplified settings for Oron

### Fixed